<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498">

        <TextView
            android:id="@+id/displayResult"
            android:layout_width="368dp"
            android:layout_height="70dp"
            android:background="@color/old_yellow"
            android:elegantTextHeight="false"
            android:ellipsize="none"
            android:fontFamily="@font/press_start_2p"
            android:padding="20dp"
            android:text="@string/_0"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="34sp" />

        <TableLayout
            android:id="@+id/keyboad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button_7"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:backgroundTint="@color/black"
                    android:fontFamily="@font/press_start_2p"
                    android:text="@string/_7"
                    android:textColor="@color/white" />


                <Button
                    android:id="@+id/button_8"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:backgroundTint="@color/black"
                    android:fontFamily="@font/press_start_2p"
                    android:text="@string/_8"
                    android:textColor="@color/white" />


                <Button
                    android:id="@+id/button_9"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:backgroundTint="@color/black"
                    android:fontFamily="@font/press_start_2p"
                    android:text="@string/_9"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/buttonDiv"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_weight="8"
                    android:backgroundTint="@color/black"
                    android:fontFamily="@font/press_start_2p"
                    android:text="@string/Div"
                    android:textColor="@color/white" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button_4"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:backgroundTint="@color/black"
                    android:fontFamily="@font/press_start_2p"
                    android:text="@string/_4"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/button_5"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:backgroundTint="@color/black"
                    android:fontFamily="@font/press_start_2p"
                    android:text="@string/_5"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/button_6"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:backgroundTint="@color/black"
                    android:fontFamily="@font/press_start_2p"
                    android:text="@string/_6"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/buttonMult"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:backgroundTint="@color/black"
                    android:fontFamily="@font/press_start_2p"
                    android:text="@string/x"
                    android:textColor="@color/white" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button_1"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:backgroundTint="@color/black"
                    android:fontFamily="@font/press_start_2p"
                    android:text="@string/_1"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/button_2"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:backgroundTint="@color/black"
                    android:fontFamily="@font/press_start_2p"
                    android:text="@string/_2"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/button_3"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:backgroundTint="@color/black"
                    android:fontFamily="@font/press_start_2p"
                    android:text="@string/_3"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/buttonPlus"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:backgroundTint="@color/black"
                    android:fontFamily="@font/press_start_2p"
                    android:text="@string/Plus"
                    android:textColor="@color/white" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button_0"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:backgroundTint="@color/black"
                    android:fontFamily="@font/press_start_2p"
                    android:text="@string/_0"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/buttonDot"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:backgroundTint="@color/black"
                    android:fontFamily="@font/press_start_2p"
                    android:text="@string/Dot"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/button_equal"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:backgroundTint="@color/black"
                    android:fontFamily="@font/press_start_2p"
                    android:text="@string/Equal"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/buttonMenos"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:backgroundTint="@color/black"
                    android:fontFamily="@font/press_start_2p"
                    android:text="@string/Minus"
                    android:textColor="@color/white" />
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/button_CE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#E90000"
            android:fontFamily="@font/press_start_2p"
            android:text="@string/ce" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>